drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - drupal11.bicsglobal.com
    secretName: bics-secret
  rules:
  - host: drupal11.bicsglobal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drupal-service
            port:
              number: 80
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
      - path: /alertmanager
        pathType: Prefix
        backend:
          service:
            name: alertmanager-operated
            port:
              number: 9093
